# openRTB-hs

./: .travis.yml  README.md  openRTB-hs.cabal  openRTB-types.cabal  openRTB.cabal
spec/OpenRTB/BidResponse/SeatBid/: BidSpec.hs
spec/OpenRTB/Enum/: APIFrameworkSpec.hs  AdPositionSpec.hs  BannerAdTypeSpec.hs  ConnectionTypeSpec.hs  ContentContextSpec.hs  ContentDeliveryMethodSpec.hs  CreativeAttributeSpec.hs  DeviceTypeSpec.hs  ExpandableDirectionSpec.hs  LocationTypeSpec.hs  NoBidReasonCodeSpec.hs  NoBidReasonCodesSpec.hs  QAGMediaRatingSpec.hs  QAGMediaRatingsSpec.hs  VASTCompanionTypeSpec.hs  VideoBidResponseProtocolSpec.hs  VideoLinearitySpec.hs  VideoPlaybackMethodSpec.hs  VideoQualitySpec.hs  VideoStartDelaySpec.hs
spec/OpenRTB/Types/BidResponse/: SeatBidSpec.hs
spec/OpenRTB/Types/BidResponse/SeatBid/: BidSpec.hs
spec/OpenRTB/Types/Enum/: APIFrameworkSpec.hs  AdPositionSpec.hs  BannerAdTypeSpec.hs  ConnectionTypeSpec.hs  ContentContextSpec.hs  ContentDeliveryMethodSpec.hs  CreativeAttributeSpec.hs  DeviceTypeSpec.hs  ExpandableDirectionSpec.hs  LocationTypeSpec.hs  NoBidReasonCodeSpec.hs  QAGMediaRatingSpec.hs  VASTCompanionTypeSpec.hs  VideoBidResponseProtocolSpec.hs  VideoLinearitySpec.hs  VideoPlaybackMethodSpec.hs  VideoQualitySpec.hs  VideoStartDelaySpec.hs
spec/Test/: Helper.hs  Instances.hs
src/: OpenRTB.hs
src/OpenRTB/: BidRequest.hs  BidResponse.hs
src/OpenRTB/BidRequest/: App.hs  Device.hs  Geo.hs  Imp.hs  Regs.hs  Site.hs  User.hs
src/OpenRTB/BidRequest/DistributionChannel/: Content.hs  Publisher.hs
src/OpenRTB/BidRequest/DistributionChannel/Content/: Producer.hs
src/OpenRTB/BidRequest/Imp/: Banner.hs  Native.hs  Pmp.hs  Video.hs
src/OpenRTB/BidRequest/Imp/Pmp/: Deal.hs
src/OpenRTB/BidRequest/User/: Data.hs
src/OpenRTB/BidRequest/User/Data/: Segment.hs
src/OpenRTB/BidResponse/: SeatBid.hs
src/OpenRTB/BidResponse/SeatBid/: Bid.hs
src/OpenRTB/Enum/: APIFramework.hs  APIFrameworks.hs  AdPosition.hs  BannerAdType.hs  BannerAdTypes.hs  ConnectionType.hs  ContentContext.hs  ContentDeliveryMethod.hs  ContentDeliveryMethods.hs  CreativeAttribute.hs  CreativeAttributes.hs  DeviceType.hs  ExpandableDirection.hs  LocationType.hs  NoBidReasonCode.hs  NoBidReasonCodes.hs  QAGMediaRating.hs  QAGMediaRatings.hs  VASTCompanionType.hs  VASTCompanionTypes.hs  VideoBidResponseProtocol.hs  VideoBidResponseProtocols.hs  VideoLinearity.hs  VideoPlaybackMethod.hs  VideoPlaybackMethods.hs  VideoQuality.hs  VideoStartDelay.hs
src/OpenRTB/Types/: BidRequest.hs  BidResponse.hs
src/OpenRTB/Types/BidRequest/: App.hs  Device.hs  Geo.hs  Imp.hs  Regs.hs  Site.hs  User.hs
src/OpenRTB/Types/BidRequest/DistributionChannel/: Content.hs  Publisher.hs
src/OpenRTB/Types/BidRequest/DistributionChannel/Content/: Producer.hs
src/OpenRTB/Types/BidRequest/Imp/: Banner.hs  Native.hs  Pmp.hs  Video.hs
src/OpenRTB/Types/BidRequest/Imp/Pmp/: Deal.hs
src/OpenRTB/Types/BidRequest/User/: Data.hs
src/OpenRTB/Types/BidRequest/User/Data/: Segment.hs
src/OpenRTB/Types/BidResponse/: SeatBid.hs
src/OpenRTB/Types/BidResponse/SeatBid/: Bid.hs
src/OpenRTB/Types/Enum/: APIFramework.hs  AdPosition.hs  BannerAdType.hs  ConnectionType.hs  ContentContext.hs  ContentDeliveryMethod.hs  CreativeAttribute.hs  DeviceType.hs  ExpandableDirection.hs  LocationType.hs  NoBidReasonCode.hs  QAGMediaRating.hs  VASTCompanionType.hs  VideoBidResponseProtocol.hs  VideoLinearity.hs  VideoPlaybackMethod.hs  VideoQuality.hs  VideoStartDelay.hs
