name:                openRTB
version:             0.1.0.0
synopsis:            Haskell implementation of the OpenRTB spec
description:         Please see README.md
homepage:            http://github.com/ankhers/openRTB-hs
license:             BSD3
license-file:        LICENSE
author:              Justin Wood
maintainer:          justin.k.wood@gmail.com
-- copyright:           
category:            OpenRTB
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenRTB.BidRequest
                     , OpenRTB.BidResponse
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  build-depends:       base
                     , openRTB
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ankhers/openRTB-hs
