name:                openRTB
version:             0.1.0.0
synopsis:            Haskell implementation of the OpenRTB spec
description:         Please see README.md
homepage:            http://github.com/ankhers/openRTB-hs
license:             BSD3
license-file:        LICENSE
author:              Justin Wood
maintainer:          justin.k.wood@gmail.com
-- copyright:           
category:            OpenRTB
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenRTB.BidRequest.App
                     , OpenRTB.BidRequest.Device
                     , OpenRTB.BidRequest.DistributionChannel.Content.Producer
                     , OpenRTB.BidRequest.DistributionChannel.Content
                     , OpenRTB.BidRequest.DistributionChannel.Publisher
                     , OpenRTB.BidRequest.Geo
                     , OpenRTB.BidRequest.Imp.Banner
                     , OpenRTB.BidRequest.Imp.Native
                     , OpenRTB.BidRequest.Imp.Pmp.Deal
                     , OpenRTB.BidRequest.Imp.Pmp
                     , OpenRTB.BidRequest.Imp.Video
                     , OpenRTB.BidRequest.Imp
                     , OpenRTB.BidRequest.Regs
                     , OpenRTB.BidRequest.Site
                     , OpenRTB.BidRequest.User.Data.Segment
                     , OpenRTB.BidRequest.User.Data
                     , OpenRTB.BidRequest.User
                     , OpenRTB.BidRequest
                     , OpenRTB.BidResponse.SeatBid.Bid
                     , OpenRTB.BidResponse.SeatBid
                     , OpenRTB.BidResponse
                     , OpenRTB.Enum.AdPosition
                     , OpenRTB.Enum.APIFramework
                     , OpenRTB.Enum.BannerAdType
                     , OpenRTB.Enum.ConnectionType
                     , OpenRTB.Enum.ContentContext
                     , OpenRTB.Enum.ContentDeliveryMethod
                     , OpenRTB.Enum.CreativeAttribute
                     , OpenRTB.Enum.DeviceType
                     , OpenRTB.Enum.ExpandableDirection
                     , OpenRTB.Enum.LocationType
                     , OpenRTB.Enum.NoBidReasonCode
                     , OpenRTB.Enum.QAGMediaRating
                     , OpenRTB.Enum.VASTCompanionType
                     , OpenRTB.Enum.VideoBidResponseProtocol
                     , OpenRTB.Enum.VideoLinearity
                     , OpenRTB.Enum.VideoPlaybackMethod
                     , OpenRTB.Enum.VideoQuality
                     , OpenRTB.Enum.VideoStartDelay

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , scientific
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , QuickCheck
                     , text
                     , scientific
                     , openRTB
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Test.Instances

source-repository head
  type:     git
  location: https://github.com/ankhers/openRTB-hs
